# kwantowy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANNOUNCEMENT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  docker-compose.yml  start_local.py  test_api.db
services/api/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  test_api.db
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_api_keys.py  0003_add_jobs_indexes.py
services/api/app/: main.py
services/api/app/api/: deps.py  routes.py
services/api/app/core/: config.py  correlation.py  logging.py  observability.py  rate_limit.py
services/api/app/db/: models.py  session.py
services/api/app/domain/: schemas.py  state_machine.py
services/api/app/queue/: redis_queue.py
services/api/app/repositories/: api_keys.py  audit.py  experiments.py  jobs.py  results.py
services/api/app/services/: benchmarking.py  circuit_optimiser.py  cost_governance.py  experiment_versioning.py  job_service.py  provider_factory.py  provider_registry.py  qasm_validator.py  result_comparator.py  (+3 more)
services/api/tests/: test_api_jobs.py  test_circuit_optimiser.py  test_healthz.py  test_idempotency.py  test_integration_async.py  test_platform_api.py  test_provider_registry.py  test_qasm_validator.py  test_queue_metrics.py  test_redis_queue.py  test_result_comparator.py  test_state_machine.py  test_state_machine_extended.py  test_worker_polling.py  test_worker_service.py  test_workflow_engine.py
(+102 files in other folders)
